# simple-evals

./: .env.example  .gitignore  README.md  common.py  healthbench_eval.py  healthbench_meta_eval.py  pyproject.toml  simple_evals.py  test.py
healthbench_scripts/: healthbench_analysis.ipynb
sampler/: chat_completion_sampler.py  ensemble_grader_sampler.py  o_chat_completion_sampler.py  ollama_sampler.py  responses_sampler.py
tmp/: healthbench_gpt-4.1_20250715_113115.html  healthbench_gpt-4.1_20250715_113115.json  healthbench_gpt-4.1_20250715_113115_allresults.json
