[project]
name = "simple-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "openai>=1.93.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
]
